Add images to image file. Add about me and place to visit section.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
         <meta name="robots" content="index">
         <meta name="keywords" content="Italy, Travel, Europe">
         <meta name="author" content="Ting Wen, Liu">
-        <title>Travel with me in Italy, from Rome to Milan</title>
+        <title>Holiday in Italy, from Rome to Milan</title>
         <link rel="stylesheet" href="style.css">
+
+        <!-- Linking font awesome for icons -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+
+        <!-- Linking swiper CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     </head>
     <body>
         <!-- Header/Navbar -->
@@ -25,10 +30,10 @@
                         <a href="#" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Home</a>
+                        <a href="#" class="nav-link">About this trip</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Home</a>
+                        <a href="#" class="nav-link">Travel spots</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link">Home</a>
@@ -38,7 +43,6 @@
                     </li>
                 </ul>
                 <button id="menu-open-button" class="fas fa-bars"></button>
-                    
             </nav>
         </header>
         <main>
@@ -59,7 +63,106 @@
                     </div>
                 </div>
             </section>
+
+            <!-- About Section -->
+            <section class="about-section">
+                <div class="section-content">
+                    <div class="about-image-wrapper" alt="About">
+                        <img src="images/Lizi.jpeg" alt="this is a temporary picture" class="about-image">
+                    </div>
+                    <div class="about-details">
+                        <h2 class="section-title">About this trip</h2>
+                        <p class="text">This is a 14 days trip around north Italy, we travel mostly by public transportation. For 2 specific spots we drive ourself there and enjoy the rural scence.                            
+                        </p>
+                        <div class="social-link-list">
+                            <a href="#" class="social-link">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                        </div>
+                    </div>
+
+
+                </div>
+            </section>
+
+            <!-- Must visit spots Section -->
+             <section class="menu-section">
+                <div class="section-content">
+                    <h2 class="section-title">Places to visit</h2>
+                    <ul class="menu-list">
+                        <li class="menu-item">
+                            <img src="images/2cats.jpeg" alt="temporary photo" class="menu-image">
+                            <h3 class="name">Rome</h3>
+                            <p class="text">A city full with history.</p>
+                        </li>
+                        <li class="menu-item">
+                            <img src="images/mi.JPG" alt="temporary photo" class="menu-image">
+                            <h3 class="name">Milan</h3>
+                            <p class="text">Modern fashion city</p>
+                        </li>
+                        <li class="menu-item">
+                            <img src="images/Lizi.jpeg" alt="temporary photo" class="menu-image">
+                            <h3 class="name">Venice</h3>
+                            <p class="text">the city in the river</p>
+                        </li>
+                    </ul>
+                </div>
+             </section>
+
+            <!--Testimonials section  -->
+            <section class="testimonials-section">
+                <h2 class="section-title">Members</h2>
+                <div class="section-content">
+                    <div class="slider-container swiper">
+                        <div class="slider-wrapper">
+                            <ul class="testimonials-list swiper-wrapper">
+                                <li class="testimonial swiper-slide">
+                                    <img src="images/1.JPG" alt="family member" class="user-image">
+                                    <h3 class="name">My family</h3>
+                                    <i class="feedback">My mom, grandma, sister and dad.</i>
+                                </li>
+                                <li class="testimonial swiper-slide">
+                                    <img src="images/4.JPG" alt="family member" class="user-image">
+                                    <h3 class="name">Fiona</h3>
+                                    <i class="feedback">Love the vibe in Italy.</i>
+                                </li>
+                                <li class="testimonial swiper-slide">
+                                    <img src="images/5.JPG" alt="family member" class="user-image">
+                                    <h3 class="name">Wen</h3>
+                                    <i class="feedback">Miss my cats so bad.</i>
+                                </li>
+                                <li class="testimonial swiper-slide">
+                                    <img src="images/8.JPG" alt="family member" class="user-image">
+                                    <h3 class="name">Tommy</h3>
+                                    <i class="feedback">Ferrari museum is the highlight of the trip.</i>
+                                </li>
+                                <li class="testimonial swiper-slide">
+                                    <img src="images/16.JPG" alt="family member" class="user-image">
+                                    <h3 class="name">Meng</h3>
+                                    <i class="feedback">Do anyone care about the history here?</i>
+                                </li>
+                                <li class="testimonial swiper-slide">
+                                    <img src="images/19.JPG" alt="family member" class="user-image">
+                                    <h3 class="name">Chi</h3>
+                                    <i class="feedback">I want rice!!</i>
+                                </li>
+                            </ul>
+                            <!-- If we need pagination -->
+                            <div class="swiper-pagination"></div>
+                            <div class="swiper-button-prev"></div>
+                            <div class="swiper-button-next"></div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
+
         </main>
+        <!-- Link custom script -->
         <script src="script.js"></script>
+
+        <!-- Link swiper script -->
+        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     </body>
 </html>
