--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <section class="about-section">
                 <div class="section-content">
                     <div class="about-image-wrapper" alt="About">
-                        <img src="images/Lizi.jpeg" alt="this is a temporary picture" class="about-image">
+                        <img src="images/5.jpg" alt="this is a temporary picture" class="about-image">
                     </div>
                     <div class="about-details">
                         <h2 class="section-title">About this trip</h2>
@@ -91,17 +91,17 @@
                     <h2 class="section-title">Places to visit</h2>
                     <ul class="menu-list">
                         <li class="menu-item">
-                            <img src="images/2cats.jpeg" alt="temporary photo" class="menu-image">
+                            <img src="images/3.jpg" alt="temporary photo" class="menu-image">
                             <h3 class="name">Rome</h3>
                             <p class="text">A city full with history.</p>
                         </li>
                         <li class="menu-item">
-                            <img src="images/mi.JPG" alt="temporary photo" class="menu-image">
+                            <img src="images/17.JPG" alt="temporary photo" class="menu-image">
                             <h3 class="name">Milan</h3>
                             <p class="text">Modern fashion city</p>
                         </li>
                         <li class="menu-item">
-                            <img src="images/Lizi.jpeg" alt="temporary photo" class="menu-image">
+                            <img src="images/14.jpg" alt="temporary photo" class="menu-image">
                             <h3 class="name">Venice</h3>
                             <p class="text">the city in the river</p>
                         </li>
