Adding Swiper to Members

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 
         <!-- Linking swiper CSS -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+        <link rel="stylesheet"  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     </head>
     <body>
         <!-- Header/Navbar -->
@@ -101,7 +101,7 @@
                             <p class="text">Modern fashion city</p>
                         </li>
                         <li class="menu-item">
-                            <img src="images/14.jpg" alt="temporary photo" class="menu-image">
+                            <img src="images/7.jpg" alt="temporary photo" class="menu-image">
                             <h3 class="name">Venice</h3>
                             <p class="text">the city in the river</p>
                         </li>
@@ -115,42 +115,42 @@
                 <div class="section-content">
                     <div class="slider-container swiper">
                         <div class="slider-wrapper">
-                            <ul class="testimonials-list swiper-wrapper">
-                                <li class="testimonial swiper-slide">
+                            <div class="testimonials-list swiper-wrapper">
+                                <div class="testimonial swiper-slide">
                                     <img src="images/1.JPG" alt="family member" class="user-image">
                                     <h3 class="name">My family</h3>
                                     <i class="feedback">My mom, grandma, sister and dad.</i>
-                                </li>
-                                <li class="testimonial swiper-slide">
+                                </div>
+                                <div class="testimonial swiper-slide">
                                     <img src="images/4.JPG" alt="family member" class="user-image">
                                     <h3 class="name">Fiona</h3>
                                     <i class="feedback">Love the vibe in Italy.</i>
-                                </li>
-                                <li class="testimonial swiper-slide">
+                                </div>
+                                <div class="testimonial swiper-slide">
                                     <img src="images/5.JPG" alt="family member" class="user-image">
                                     <h3 class="name">Wen</h3>
                                     <i class="feedback">Miss my cats so bad.</i>
-                                </li>
-                                <li class="testimonial swiper-slide">
+                                </div>
+                                <div class="testimonial swiper-slide">
                                     <img src="images/8.JPG" alt="family member" class="user-image">
                                     <h3 class="name">Tommy</h3>
                                     <i class="feedback">Ferrari museum is the highlight of the trip.</i>
-                                </li>
-                                <li class="testimonial swiper-slide">
+                                </div>
+                                <div class="testimonial swiper-slide">
                                     <img src="images/16.JPG" alt="family member" class="user-image">
                                     <h3 class="name">Meng</h3>
                                     <i class="feedback">Do anyone care about the history here?</i>
-                                </li>
-                                <li class="testimonial swiper-slide">
+                                </div>
+                                <div class="testimonial swiper-slide">
                                     <img src="images/19.JPG" alt="family member" class="user-image">
                                     <h3 class="name">Chi</h3>
                                     <i class="feedback">I want rice!!</i>
-                                </li>
-                            </ul>
-                            <!-- If we need pagination -->
-                            <div class="swiper-pagination"></div>
-                            <div class="swiper-button-prev"></div>
-                            <div class="swiper-button-next"></div>
+                                </div>
+                            </div>
+
+                            <div class="swiper-slide-button swiper-pagination"></div>
+                            <div class="swiper-slide-button swiper-button-prev"></div>
+                            <div class="swiper-slide-button swiper-button-next"></div>
                         </div>
                     </div>
                 </div>
