--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                         <a href="#" class="nav-link">Travel spots</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Home</a>
+                        <a href="#" class="nav-link">Members</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Home</a>
+                        <a href="#" class="nav-link">Gallery</a>
                     </li>
                 </ul>
                 <button id="menu-open-button" class="fas fa-bars"></button>
