Create gallery section

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
              </section>
 
             <!--Testimonials section  -->
+            <!-- FIXME - fix the pagination-->
             <section class="testimonials-section">
                 <h2 class="section-title">Members</h2>
                 <div class="section-content">
@@ -156,7 +157,31 @@
                 </div>
             </section>
 
-
+            <section class="gallery-section">
+                <h2 class="section-title">Gallery</h2>
+                <div class="section-content">
+                    <ul class="gallery-list">
+                        <li class="gallery-item">
+                            <img src="images/18.JPG" alt="Gallery" class="gallery-image">
+                        </li>
+                        <li class="gallery-item">
+                            <img src="images/16.JPG" alt="Gallery" class="gallery-image">
+                        </li>
+                        <li class="gallery-item">
+                            <img src="images/13.JPG" alt="Gallery" class="gallery-image">
+                        </li>
+                        <li class="gallery-item">
+                            <img src="images/12.JPG" alt="Gallery" class="gallery-image">
+                        </li>
+                        <li class="gallery-item">
+                            <img src="images/11.JPG" alt="Gallery" class="gallery-image">
+                        </li>
+                        <li class="gallery-item">
+                            <img src="images/10.JPG" alt="Gallery" class="gallery-image">
+                        </li>
+                    </ul>
+                </div>
+            </section>
 
         </main>
         <!-- Link custom script -->
