Create Gallery and fiinish styling

--- a/index.html
+++ b/index.html
@@ -157,12 +157,13 @@
                 </div>
             </section>
 
+            <!-- Gallery Section -->
             <section class="gallery-section">
                 <h2 class="section-title">Gallery</h2>
                 <div class="section-content">
                     <ul class="gallery-list">
                         <li class="gallery-item">
-                            <img src="images/18.JPG" alt="Gallery" class="gallery-image">
+                            <img src="images/9.JPG" alt="Gallery" class="gallery-image">
                         </li>
                         <li class="gallery-item">
                             <img src="images/16.JPG" alt="Gallery" class="gallery-image">
