--- a/index.html
+++ b/index.html
@@ -20,26 +20,26 @@
         <!-- Header/Navbar -->
         <header>
             <nav class="navbar section-content">
-                <a href="#" class="nav-logo">
+                <a href="home" class="nav-logo">
                     <h2 class="logo-text">🇮🇹 Italy Blog</h2>
                 </a>
                 <ul class="nav-menu">
                     <button id="menu-close-button" class="fas fa-times">
                     </button>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Home</a>
+                        <a href="#home" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">About this trip</a>
+                        <a href="#about" class="nav-link">About this trip</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Travel spots</a>
+                        <a href="#travelSpots" class="nav-link">Travel spots</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Members</a>
+                        <a href="#testimonials" class="nav-link">Members</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Gallery</a>
+                        <a href="#gallery" class="nav-link">Gallery</a>
                     </li>
                 </ul>
                 <button id="menu-open-button" class="fas fa-bars"></button>
@@ -47,7 +47,7 @@
         </header>
         <main>
             <!-- Hero Section -->
-            <section class="hero-section">
+            <section class="hero-section" id="home">
                 <div class="section-content">
                     <div class="hero-details">
                         <h2 class="title"> Holidays in Italy </h2>
@@ -65,7 +65,7 @@
             </section>
 
             <!-- About Section -->
-            <section class="about-section">
+            <section class="about-section" id="about">
                 <div class="section-content">
                     <div class="about-image-wrapper" alt="About">
                         <img src="images/5.jpg" alt="this is a temporary picture" class="about-image">
@@ -86,7 +86,7 @@
             </section>
 
             <!-- Must visit spots Section -->
-             <section class="menu-section">
+             <section class="menu-section" id="travelSpots">
                 <div class="section-content">
                     <h2 class="section-title">Places to visit</h2>
                     <ul class="menu-list">
@@ -111,7 +111,7 @@
 
             <!--Testimonials section  -->
             <!-- FIXME - fix the pagination-->
-            <section class="testimonials-section">
+            <section class="testimonials-section" id="testimonials">
                 <h2 class="section-title">Members</h2>
                 <div class="section-content">
                     <div class="slider-container swiper">
@@ -158,7 +158,7 @@
             </section>
 
             <!-- Gallery Section -->
-            <section class="gallery-section">
+            <section class="gallery-section" id="gallery">
                 <h2 class="section-title">Gallery</h2>
                 <div class="section-content">
                     <ul class="gallery-list">
@@ -181,6 +181,21 @@
                             <img src="images/10.JPG" alt="Gallery" class="gallery-image">
                         </li>
                     </ul>
+                </div>
+            </section>
+
+            <!-- Footer section -->
+            <section class="footer-section">
+                <div class="section-content">
+                    <p class="copyright-text">&copy; 2025 Italy Blog</p>
+
+                    <div class="social-link-list">
+                        <a href="#" class="social-link"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/wenliu0075
+                        " class="social-link"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://github.com/truntrun33
+                        " class="social-link"><i class="fa-brands fa-github"></i></a>
+                    </div>
                 </div>
             </section>
 
